[project]
name = "refuge-esn81"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Jamme",email = "thomasdelagoutine@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (==0.121.0)",
    "uvicorn (==0.38.0)",
    "sqlalchemy (==2.0.44)",
    "pymysql (==1.1.2)",
    "alembic (>=1.17.1,<2.0.0)",
    "fastapi-cors (>=0.0.6,<0.0.7)"
]

[tool.poetry]
packages = [{include = "refuge_esn81", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
